add payment + chat
